--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 	font:15px/1.5 Arial, Helvetica, sans-serif;
 	padding: 0;
 	margin:0;
-	background-color: #f4f4f4;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 
 .container {
@@ -110,7 +110,48 @@ span .container{
   font-weight: bold;
 }
 
+.container_welcome {
+  display: flex;
+}
 
+.blog_title {
+  display: flex;
+  flex-direction: column;
+}
+
+.row{
+  order: 1;
+}
+
+.radioPlayer {
+  order: 2;
+  align-content: right;
+}
+
+.container_radio {
+  display: flex;
+}
+
+.blog1 {
+  flex:1;
+  margin-left: 20px;
+  margin-top: 50px;
+  width: 400px;
+  align-content: flex-start;
+  order: 2;
+  text-align: center;
+  max-width: 40%;
+}
+
+.blog2 {
+  flex:1;
+  margin-top: 50px;
+  width: 400px;
+  align-content: flex-end;
+  order: 1;
+  text-align: center; 
+  max-width: 40%;
+}
 
 .bg-image {
   background-size: cover;
@@ -165,7 +206,7 @@ span .container{
     color: white;
 } 
 .fa-youtube{
-    
+  width: 0.2em;
     color: white;
 } 
 
