--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 	font:15px/1.5 Arial, Helvetica, sans-serif;
 	padding: 0;
 	margin:0;
-	background-color: rgba(255, 255, 255, 0.6);
+	/*background-color: rgb(255, 255, 255);*/
 }
 
 .container {
@@ -25,8 +25,8 @@ li, a{
     font-weight: 500;
     font-size: 16px;
     color: white;
-    /*text-decoration-style: none;
-*/
+    text-decoration-style: none;
+
 }
 
 .header {
@@ -34,6 +34,7 @@ li, a{
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    background-color: rgba(95,186,233,0.0);
 }
 
 .logo {
@@ -48,11 +49,13 @@ li, a{
 
 .nav_link {
     list-style: none;
+    
 }
 
 .nav_link li {
     display: inline-block;
     padding: 0px 20px;
+    text-decoration: none;
 }
 
 
@@ -95,8 +98,31 @@ li, a{
 
 .studio-heading{
   color: white;
-  
 }
+
+.container_welcome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.welcome {
+  order: 1;
+  justify-content: center;
+  /*
+width: 56em;*/
+text-align: center;
+}
+
+.radioPlayer {
+  order: 2;
+  align-content: stretch;
+  justify-content: center;
+ /* width: 100em;*/
+}
+
+
+
 .blog-text {
   text-align: left;
   width: 70%;
@@ -110,23 +136,20 @@ span .container{
   font-weight: bold;
 }
 
-.container_welcome {
-  display: flex;
+.blog_title {
+  display: flex;  
+  flex-direction: column;
 }
 
 .blog_title {
-  display: flex;
-  flex-direction: column;
+  align-content: center;
 }
 
 .row{
   order: 1;
 }
 
-.radioPlayer {
-  order: 2;
-  align-content: right;
-}
+
 
 .container_radio {
   display: flex;
@@ -145,6 +168,7 @@ span .container{
 
 .blog2 {
   flex:1;
+  margin-left: 10px;
   margin-top: 50px;
   width: 400px;
   align-content: flex-end;
@@ -169,7 +193,8 @@ span .container{
       bottom: 0;
       z-index: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.685); }
+     /*background: rgba(0, 0, 0, 0.685);*/ }
+
   .bg-image > .container {
     position: relative;
     z-index: 1; }
@@ -182,7 +207,7 @@ span .container{
 
 .container-scroller{
   position: center;
-  background-color: white;
+  /*background-color: white;*/
 }
 
 .fa {
